finish CRUD products

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,9 @@
-@import "config/base";
 @import "config/vars";
+@import "config/base";
 @import "config/imports";
+@import "config/utilities";
+
+@import "components/loaders";
 
 @import "layouts/dashboard";
 @import "layouts/auth";
