--- a/src/assets/scss/config/_base.scss
+++ b/src/assets/scss/config/_base.scss
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+p, h1,h2,h3,h4,h5,h6{
+    margin: 0;
+}
+
+
+label.form-label:has(~ input[required]),
+label[required]{
+    margin: 0;
+    &::after{
+        content:"*";
+        color: $danger;
+    }
+}
