--- a/src/assets/scss/config/_reset.scss
+++ b/src/assets/scss/config/_reset.scss
@@ -1,4 +1,20 @@
 
+
+/*
+*
+*   Bootstrap
+*
+*/
+
+.card-header, .card-footer{ @extend .bg-light; }
+.card-body{ @extend .bg-white; }
+
+p{
+    margin: 0;
+}
+// End Bootstrap
+
+
 /*
 *
 *   FormKit
@@ -12,6 +28,20 @@
     select.formkit-input{
         @extend .form-select
     }
+
+    .formkit-wrapper{
+        &:has(input[aria-required="true"]) .formkit-label{
+            &::after{
+                content: "*";
+                color: $danger;
+            }
+        }
+    }
+}
+
+.formkit-help{
+    color: $gray-600;
+    font-size: map-get($fz, small );
 }
 
 .formkit-icon > *{
@@ -100,7 +130,14 @@
 *
 */
 
+table.datatable{
+    @extend .table;
+    @extend .table-striped;
+    @extend .table-bordered;
+}
+
 .datatable{
+
     .dt-column-title{
         text-transform: capitalize;
         text-wrap: nowrap;
@@ -108,6 +145,15 @@
 
     .row{
         margin-inline: 0 !important;
+    }
+
+    td, th{
+        padding: .2rem .5rem;
+    }
+
+    thead, tbody, tfoot, tr, td, th {
+        border-width: 1px;
+        border-color: #dee2e6;
     }
 }
 
