--- a/src/assets/scss/components/_loaders.scss
+++ b/src/assets/scss/components/_loaders.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 100;
-    background-color: rgba(black, .3);
+    background-color: rgba(gray, .4);
     border-radius: inherit;
     backdrop-filter: blur(1px);
     display: grid;
