--- a/src/assets/scss/config/_vars.scss
+++ b/src/assets/scss/config/_vars.scss
@@ -57,6 +57,7 @@ $utilities: (
             400: 400px,
             500: 500px,
             600: 600px,
+            700: 700px,
         )
     ),
     "cursor": (
